@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.5'
 	id 'io.spring.dependency-management' version '1.1.4'
+	id "io.github.ximtech.jasypt-encrypt-plugin" version "1.3.3"
 }
 
 group = 'com.inv'
@@ -19,6 +20,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'org.apache.commons:commons-text:1.12.0'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -35,6 +41,23 @@ bootJar {
 	launchScript()
 }
 
+wrapper{
+	gradleVersion = '8.7'
+	distributionType = Wrapper.DistributionType.BIN
+}
+
+encryptProperties {
+	password = System.getenv('JASYPT_ENCRYPTOR_PASSWORD')
+}
+
+decryptProperties {
+	password = System.getenv('JASYPT_ENCRYPTOR_PASSWORD')
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+test {
+	jvmArgs '-ea', '-XX:+EnableDynamicAgentLoading', '-Xshare:off'
 }
